--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "first-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "git@github.com:Kent3249/TestRepository.git",
+  "homepage": "git@github.com:Kent3249/my-project.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
